Fixed alignment of section headers

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -27,7 +27,6 @@ h1 {
 }
   
   	h1 .name {
-		
 		display: block;
 		margin: 0 auto;
 		max-width: 1180px;
@@ -58,7 +57,7 @@ h1 {
 }
 
 .spacer{
-	height:35px;
+	height:30px;
 }
 
 .section-title{
@@ -66,6 +65,7 @@ h1 {
 	text-align:center;
 	display:inline-cell;
 	float:left;
+	clear:left;
 	color:#000;
 	opacity: 0.65;
 	font-size: 40px;
